syntax = "proto3";

import "io/github/vinicreis/pubsub/common/model/result.proto";
import "io/github/vinicreis/pubsub/server/channel/model/channel.proto";
import "io/github/vinicreis/pubsub/server/channel/model/subscription.proto";
import "io/github/vinicreis/pubsub/server/channel/model/text_message.proto";

option java_package = "io.github.vinicreis.domain.server.channel.response";
option java_multiple_files = true;

message AddResponse {
  Result result = 1;
  Channel channel = 2;
  optional string message = 3;
}

message ListResponse {
  Result result = 1;
  repeated Channel channels = 2;
  optional string message = 3;
}

message RemoveByIdResponse {
  Result result = 1;
  string id = 2;
  optional Channel channel = 3;
  optional string message = 4;
}

message PublishResponse {
  Result result = 1;
  optional Channel channel = 2;
  optional string message = 3;
}

message SubscribeResponse {
  SubscriptionStatus status = 1;
  optional Channel channel = 2;
  optional TextMessage content = 3;
  optional string message = 4;
}

message PeekResponse {
  Result result = 1;
  optional Channel channel = 2;
  optional TextMessage content = 3;
  optional string message = 4;
}
